--- a/index.html
+++ b/index.html
@@ -201,13 +201,13 @@ transition: all 250ms ease-in-out 0s;
             </div>
             
             <div class="col-lg-6 col-md-6 col-sm-6">
-                <img src="img/img2.webp" alt="">
+                <img src="img2.webp" alt="">
             </div>
         </div>
         <br><br><br><br><br><br>
         <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-6">
-                <img src="img/img3.webp" alt="">
+                <img src="img3.webp" alt="">
             </div>
             <div class="col-lg-6 col-md-6 col-sm-6">
                 <h5 style="color:#F4AB58 ;">RECEIVE MORE ORDERS</h5>
@@ -232,13 +232,13 @@ transition: all 250ms ease-in-out 0s;
                 <p>*Statistics drawn from monitoring our clients’ performance indicators.</p>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-6">
-                <img src="img/img4.webp" alt="">
+                <img src="img4.webp" alt="">
             </div>
         </div>
         <br><br><br><br><br><br>
         <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-6">
-                <img src="img/img5.webp" alt="">
+                <img src="img5.webp" alt="">
             </div>
             <div class="col-lg-6 col-md-6 col-sm-6">
                 <h5 style="color:#F4AB58 ;">ACCELERATE YOUR SUCCESS</h5>
@@ -263,7 +263,7 @@ transition: all 250ms ease-in-out 0s;
                     to get started.</p>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-6">
-                <img src="img/img4.webp" alt="">
+                <img src="img4.webp" alt="">
             </div>
         </div>
     </div>
@@ -280,7 +280,7 @@ transition: all 250ms ease-in-out 0s;
                         <div class="card mb-3" style="max-width: 540px;">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="img/card1.webp" class="img-fluid rounded-start" alt="...">
+                                    <img src="card1.webp" class="img-fluid rounded-start" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -301,7 +301,7 @@ transition: all 250ms ease-in-out 0s;
                         <div class="card mb-3" style="max-width: 540px;">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="img/card2.webp" class="img-fluid rounded-start" alt="...">
+                                    <img src="card2.webp" class="img-fluid rounded-start" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -331,7 +331,7 @@ transition: all 250ms ease-in-out 0s;
                         <div class="card mb-3" style="max-width: 540px;">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="img/card3.webp" class="img-fluid rounded-start" alt="...">
+                                    <img src="card3.webp" class="img-fluid rounded-start" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -352,7 +352,7 @@ transition: all 250ms ease-in-out 0s;
                         <div class="card mb-3" style="max-width: 540px;">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="img/card4.webp" class="img-fluid rounded-start" alt="...">
+                                    <img src="card4.webp" class="img-fluid rounded-start" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
