--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         }
       
         .banner-image {
-            background-image: url(img/img1.jpg);
+            background-image: url(img1.jpg);
             background-size: cover;
         }
         .navbar-nav .nav-item .nav-link{
